--- a/css/login.css
+++ b/css/login.css
@@ -1,16 +1,5 @@
-#HEADER {
-    text-align: center;
-    padding: 50px;
-    width: 100%;
-    height: 200px;
-}
-
-body {
-    font-family: 'Courier New', monospace;
-}
-
 input[type="text"] {
-    text-decoration: blue;
+    text-decoration: rgb(252, 252, 255);
     padding: 12px;
     width: 100%;
     border-color: #E3E3E3;
@@ -20,7 +9,7 @@ input[type="text"] {
 }
 
 input[type="text"]:focus {
-    background-color: lightblue;
+    background-color: rgb(243, 250, 253);
     border-color: #E3E3E3;
     border-style: solid;
     border-width: 1px;
@@ -36,7 +25,7 @@ input[type="password"] {
 }
 
 input[type="password"]:focus {
-    background-color: lightblue;
+    background-color: rgb(243, 250, 253);
     border-color: #E3E3E3;
     border-style: solid;
     border-width: 1px;
@@ -53,16 +42,12 @@ input[type="submit"] {
     font-family: Courier New;
     color: #ffffff;
     font-size: 20px;
-    background: #3498db;
+    background: #a4cce7ac;
     padding: 10px 20px 10px 20px;
     text-decoration: none;
 }
 
 input[type="submit"]:hover {
-    background: #3cb0fd;
+    background-color: #feffff;
     text-decoration: none;
-}
-
-a {
-    color: #B0B0B0
 }
