--- a/css/upload.css
+++ b/css/upload.css
@@ -299,7 +299,7 @@ input[type=text] {
     font-size: 24px;
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 80%;
+    width: 100%;
     table-layout: fixed;
   }
   
@@ -366,4 +366,12 @@ input[type=text] {
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
+}
+#title {
+  width: 100%;
+  padding: 2px;
+  padding-bottom: 15px;
+  color: rgba(1, 6, 101);;
+  font-weight: bold;
+  border-bottom: 1px solid rgba(1, 6, 101, 0.378);
 }
