--- a/css/takeoff.css
+++ b/css/takeoff.css
@@ -3,35 +3,33 @@
     border-collapse: collapse;
     width: 100%;
     min-height: 25px;
-    font-size: 20px;
+    font-size: 15px;
 }
   
 #takeoff td, #takeoff th {
-min-height: 25px;
-border: 3px solid white;
-padding: 8px;
+    min-height: 25px;
+    border: 3px solid white;
+    padding: 8px;
 }
 
-#takeoff tr:nth-child(even){background-color: #f2f2f2;}
-
-#takeoff tr:hover {background-color: #ddd;}
+#takeoff tr:nth-child(odd){background-color: rgb(244, 249, 253);}
+#takeoff tr:hover {background-color: rgb(233, 231, 231);}
 
 #takeoff th {
     min-height: 25px;
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    font-size: 25px;
-    background-color: #a5a5a5;
-    color: white;
+    font-size: 20px;
+    background-color: rgb(233, 242, 250);
+    color: rgba(1, 6, 101);
 }
 
-
-h1 {
+#title {
     width: 100%;
     padding: 2px;
     padding-bottom: 15px;
-    color: #010665;
+    color: rgba(1, 6, 101);;
     font-weight: bold;
-    border-bottom: 3px solid grey;
-}
+    border-bottom: 1px solid rgba(1, 6, 101, 0.378);
+  }
