--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ a:hover, a:active, a:focus {
 }
 
 p {
-  margin-bottom: 20px;
+  margin-bottom: 28px;
 }
 
 h1, h2, h3, h4, h5, h6, figure {
@@ -502,6 +502,7 @@ h1, h2, h3, h4, h5, h6, figure {
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   border-radius: 50%;
+  border: 2px solid rgb(1, 6, 101);
 }
 .fh5co-staff h3 {
   font-size: 24px;
