--- a/css/shipment.css
+++ b/css/shipment.css
@@ -1,4 +1,4 @@
-#shipment {
+#shipment , #cart{
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
@@ -6,7 +6,7 @@
     font-size: 15px;
 }
   
-#shipment td, #shipment th {
+#shipment td, #shipment th ,#cart td, #cart th{
     min-height: 25px;
     border: 3px solid white;
     padding: 8px;
@@ -14,8 +14,10 @@
 
 #shipment tr:nth-child(odd){background-color: rgb(244, 249, 253);}
 #shipment tr:hover {background-color: rgb(233, 231, 231);}
+#cart tr:nth-child(odd){background-color: rgb(244, 249, 253);}
+#cart tr:hover {background-color: rgb(233, 231, 231);}
 
-#shipment th {
+#shipment th , #cart th{
     min-height: 25px;
     padding-top: 12px;
     padding-bottom: 12px;
