--- a/css/chat.css
+++ b/css/chat.css
@@ -1,9 +1,9 @@
-.no_read{
+.no_read {
     font-weight: bold;
     color: rgba(1, 6, 101);
 }
 
-.message{
+.message {
     border: 2px solid #dedede;
     background-color: #f1f1f1;
     border-radius: 5px;
@@ -17,19 +17,23 @@
     clear: both;
     display: table;
 }
-  
+
 .darker {
     border-color: #ccc;
     background-color: #ddd;
 }
-  
+
 .time-right {
     float: right;
     color: #aaa;
 }
-  
+
 .time-left {
     float: left;
     color: #999;
 }
 
+.chatCheckBox {
+    width: 10%;
+    text-align: center;
+}
