--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
   font-weight: normal;
   font-style: normal;
 }
+#cart_product_num{
+  color: #000;
+}
 /* =======================================================
 *
 * 	Template Style 
