--- a/css/shipment.css
+++ b/css/shipment.css
@@ -1,12 +1,13 @@
-#shipment , #cart{
+#shipment , #cart, #buy{
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
     min-height: 25px;
     font-size: 15px;
+    background-color: #f2f2f2;
 }
   
-#shipment td, #shipment th ,#cart td, #cart th{
+#shipment td, #shipment th ,#cart td, #cart th, #buy td, #buy th{
     min-height: 25px;
     border: 3px solid white;
     padding: 8px;
@@ -15,9 +16,12 @@
 #shipment tr:nth-child(odd){background-color: rgb(244, 249, 253);}
 #shipment tr:hover {background-color: rgb(233, 231, 231);}
 #cart tr:nth-child(odd){background-color: rgb(244, 249, 253);}
-#cart tr:hover {background-color: rgb(233, 231, 231);}
 
-#shipment th , #cart th{
+#cart tr:hover {background-color: rgb(233, 231, 231);}
+#buy tr:nth-child(odd){background-color: rgb(244, 249, 253);}
+#buy tr:hover {background-color: rgb(233, 231, 231);}
+
+#shipment th , #cart th, #buy th{
     min-height: 25px;
     padding-top: 12px;
     padding-bottom: 12px;
