改顏色而已

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   font-style: normal;
 }
 #cart_product_num{
-  color: #000;
+  background-color: rgba(1, 6, 101, 0.584);
 }
 /* =======================================================
 *
